# scut-ai-proxy

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
src/: chat3.rs  config.rs  main.rs  openai.rs  planner.rs  reasoning.rs  sse.rs
